--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ ASALocalRun/
 /DoWproReplayWatcher.Logic/LogicSettings.Designer.cs
 /DoWproReplayWatcher.Logic/LogicSettings.cs
 /DoWproReplayWatcher.Logic/app.config
+/deadcode.txt
